[package]
name = "stellar-pi-coin-sdk"
version = "1.0.0"
edition = "2021"
authors = ["KOSASIH"]
description = "Hyper-tech Stablecoin SDK for Pi Coin on Stellar with GodHead Nexus AI"
license = "MIT"

[workspace]
members = [
    "contracts/pi_coin",
    "contracts/ecosystem/*",  # All ecosystem contracts
    "src",
]

[dependencies]
soroban-sdk = "0.9"
soroban-env-common = "0.0.15"
soroban-env-guest = "0.0.15"
soroban-env-host = "0.0.15"
rand = "0.8"
num-traits = "0.2"
arrayvec = "0.7"
itertools = "0.10"
sha3 = "0.10"
aes-gcm = "0.10"
tokio = { version = "1.0", optional = true }  # For async if needed
serde = "1.0"

[features]
default = []
testutils = ["soroban-sdk/testutils"]
tokio = ["dep:tokio"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "contract"
path = "src/lib.rs"
